Avalonia Gui setup
login form done
login to main form transition done
Main form in progress
